--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,198 +1,144 @@
-<!--<div class="row">
-    <div class="col-md-12"></div>
-    <div class="col-md-2 d-flex justify-content-center txt" id="ClickIn">
-        <h2>Click<strong>In</strong></h2>
-    </div>       
-</div>-->
+<!-- NAVBAR -->
 
-<div class="row">
-    <div class="col-md-7">
-        <nav class="navbar navbar-expand-lg navbar-transparent ">
+<div class="col-md-7">
+  <nav class="navbar navbar-expand-lg navbar-transparent ">
 
-            <a [routerLink]="'/home'" class="titulo"><strong>
-                    <img src="/assets/images/logonew.png" id="logo">
-                </strong></a>
-            <a class="navbar-brand" href="#"></a>
+    <a [routerLink]="'/home'" class="titulo"><strong>
+        <img src="/assets/images/logonew.png" id="logo">
+      </strong></a>
+    <a class="navbar-brand" href="#"></a>
 
-        </nav>
-    </div>
+    <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal" data-target="#modalCadastro">Cadastre-se</a>
+    <button type="button" data-toggle="modal" data-target="#modalLogin" class="btn btn-outline-dark">Entrar</button>
 
-
-    <div class="col-md-5">
-        <div class="col-md-4-mb-10 mt-3 itenNav">
-            <nav class="nav nav-pills nav-fill">
-                <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal"
-                    data-target="#modalCadastro">Cadastre-se</a>
-                <button type="button" data-toggle="modal" data-target="#modalLogin"
-                    class="btn btn-outline-dark">Entrar</button>
-            </nav>
-        </div>
-
-    </div>
+  </nav>
 </div>
 
+<!-- MODAL LOGIN -->
 
-
-<!-- Modal -->
 <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="card-title text-center">
-        Entrar
-      </h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form class="form-signin">
-        <div class="form-label-group">
-          <label for="inputEmail">E-mail</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Endereço de e-mail" required
-            autofocus [(ngModel)]="emailLogin" [ngModelOptions]="{standalone: true}">
-        </div>
-        <div class="form-label-group mt-3">
-          <label for="inputPassword">Senha</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Senha" [(ngModel)]="senhaLogin" [ngModelOptions]="{standalone: true}" required>
-        </div>
-        <div class="custom-control custom-checkbox mb-3 mt-3">
-          <label class="custom-control-label " for="customCheck1">Lembrar-me</label>
-          <input type="checkbox" class="custom-control-input" id="customCheck1">
-          <br>
-          <a href= "#">Esqueceu a senha? Clique aqui</a>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block text-uppercase" (click)="validaLogin();">Entrar</button>
-        <hr class="my-4">
-      </form>
-    </div>
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="card-title text-center">
+          Entrar
+        </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="form-signin">
+          <div class="form-label-group">
+            <label for="inputEmail">E-mail</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Endereço de e-mail" required autofocus
+              [(ngModel)]="emailLogin" [ngModelOptions]="{standalone: true}">
+          </div>
+          <div class="form-label-group mt-3">
+            <label for="inputPassword">Senha</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Senha" [(ngModel)]="senhaLogin"
+              [ngModelOptions]="{standalone: true}" required>
+          </div>
+          <div class="custom-control custom-checkbox mb-3 mt-3">
+            <label class="custom-control-label " for="customCheck1">Lembrar-me</label>
+            <input type="checkbox" class="custom-control-input" id="customCheck1">
+            <br>
+            <a href="#">Esqueceu a senha? Clique aqui</a>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block text-uppercase" (click)="validaLogin();">Entrar</button>
+          <hr class="my-4">
+        </form>
+      </div>
 
+    </div>
   </div>
 </div>
-</div>
-  <!--Modal cadastro-->
+
+<!-- MODAL CADASTRO -->
+
 <div class="modal fade" id="modalCadastro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-aria-hidden="true">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="card-title text-center">
-        Cadastre-se
-      </h5>
-      <button type="button " class="close" data-dismiss="modal" aria-label="Fechar">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form class="form-signin">
-        <div class="form-label-group">
-          <label for="inputNome">Nome Completo</label>
-          <input type="nome" id="inputnome" class="form-control" [(ngModel)]="nomeCompleto" [ngModelOptions]="{standalone: true}" placeholder="Digite seu nome completo" required autofocus>
-          <span id = "spanPadrao" *ngIf='_msgErroNome'>{{_msgErroNome}}</span>
-        </div>
-        <div class="form-label-group mt-3">
-          <label for="inputEmail">E-mail</label>
-          <input type="email" id="inputEmail" class="form-control" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Digite seu e-mail"
-            required autofocus>
-            <span id = "spanPadrao" *ngIf='_msgErroEmail'>{{_msgErroEmail}}</span>
-        </div>
-        <div class="form-label-group mt-3">
-          <label for="inputTelefone">Telefone</label>
-          <input type="number" id="inputTelefone" class="form-control" [(ngModel)]="telefone" [ngModelOptions]="{standalone: true}" placeholder="Digite o seu telefone" required
-            autofocus>
-            <span id = "spanPadrao" *ngIf='_msgErroTelefone'>{{_msgErroTelefone}}</span>
-        </div>
-        <div class="form-label-group mt-3">
-          <label for="inputPassword">Senha</label> 
-          <input type="password" id="inputPassword" class="form-control" [(ngModel)]="senha" [ngModelOptions]="{standalone: true}" placeholder="Digite a sua senha (minimo de 10 caracteres)" (keypress) = "forcaSenha();" (keyup) = "forcaSenha();" required data-toggle="tooltip" title="Para a senha ser forte digite ao menos 10 dígitos e um caracter especial (@, %, #, &, $)">
-          
-          <span id = "spanSenhaFraca" *ngIf='_msgSenhaFraca'>{{_msgSenhaFraca}}</span>
-          <span id = "spanSenhaForte" *ngIf='_msgSenhaForte'>{{_msgSenhaForte}}</span>
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="card-title text-center">
+          Cadastre-se
+        </h5>
+        <button type="button " class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="form-signin">
+          <div class="form-label-group">
+            <label for="inputNome">Nome Completo</label>
+            <input type="nome" id="inputnome" class="form-control" [(ngModel)]="nomeCompleto"
+              [ngModelOptions]="{standalone: true}" placeholder="Digite seu nome completo" required autofocus>
+            <span id="spanPadrao" *ngIf='_msgErroNome'>{{_msgErroNome}}</span>
+          </div>
+          <div class="form-label-group mt-3">
+            <label for="inputEmail">E-mail</label>
+            <input type="email" id="inputEmail" class="form-control" [(ngModel)]="email"
+              [ngModelOptions]="{standalone: true}" placeholder="Digite seu e-mail" required autofocus>
+            <span id="spanPadrao" *ngIf='_msgErroEmail'>{{_msgErroEmail}}</span>
+          </div>
+          <div class="form-label-group mt-3">
+            <label for="inputTelefone">Telefone</label>
+            <input type="number" id="inputTelefone" class="form-control" [(ngModel)]="telefone"
+              [ngModelOptions]="{standalone: true}" placeholder="Digite o seu telefone" required autofocus>
+            <span id="spanPadrao" *ngIf='_msgErroTelefone'>{{_msgErroTelefone}}</span>
+          </div>
+          <div class="form-label-group mt-3">
+            <label for="inputPassword">Senha</label>
+            <input type="password" id="inputPassword" class="form-control" [(ngModel)]="senha"
+              [ngModelOptions]="{standalone: true}" placeholder="Digite a sua senha (minimo de 10 caracteres)"
+              (keypress)="forcaSenha();" (keyup)="forcaSenha();" required data-toggle="tooltip"
+              title="Para a senha ser forte digite ao menos 10 dígitos e um caracter especial (@, %, #, &, $)">
+
+            <span id="spanSenhaFraca" *ngIf='_msgSenhaFraca'>{{_msgSenhaFraca}}</span>
+            <span id="spanSenhaForte" *ngIf='_msgSenhaForte'>{{_msgSenhaForte}}</span>
           </div>
 
           <div class="form-label-group mt-3">
-              <label for="inputPassword">Confirme a senha</label>
-              <input type="password" id="inputPassword" class="form-control" [(ngModel)]="senhaRepetida" [ngModelOptions]="{standalone: true}"  placeholder="Repita a sua senha" required>
-              <span id = "spanPadrao" *ngIf='_msgSenha'>{{_msgSenha}}</span>
-              
-            </div>
+            <label for="inputPassword">Confirme a senha</label>
+            <input type="password" id="inputPassword" class="form-control" [(ngModel)]="senhaRepetida"
+              [ngModelOptions]="{standalone: true}" placeholder="Repita a sua senha" required>
+            <span id="spanPadrao" *ngIf='_msgSenha'>{{_msgSenha}}</span>
 
-          
-        <button class="btn btn-lg btn-primary btn-block text-uppercase mt-4" (click)="valida();">Cadastrar</button>
-        <hr class="my-4">
-      </form>
-    </div>
-  </div>
-</div>
-</div>
+          </div>
 
 
-
-
-<div class="row mt-5">
-    <div class="col" id="texto">
-      <div class="row tamanho">
+          <button class="btn btn-lg btn-primary btn-block text-uppercase mt-4" (click)="valida();">Cadastrar</button>
+          <hr class="my-4">
+        </form>
       </div>
-        <h1 class="display-3 d-flex justify-content-end ">Bem-Vindxs à sua <br>
-          comunidade de inclusão profissional</h1> 
-          <div class="row">
-            <div class="col-md-9" id="navbaixo">
-                <nav class="navbar navbar-expand-lg navbar-transparent ">
-                    <a class="nav-link" [routerLink]="'/quemsomos'">Quem Somos</a><strong>|</strong>
-                    <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
-                    <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a><strong>|</strong>
-                    <a class="nav-link" [routerLink]="'/faq'">FAQs</a>
-                </nav>
-                </div>
-        </div>
     </div>
-    
-    <div class="col">
-        <img src="../../assets/images/inclusao.png" id="simbolo" title="imagem cadeira de rodas colorida" alt="imagem cadeira de rodas colorida">
-    </div>
-</div>
-
-
-<div class="jumbotron jumbotron-fluid fundo" >
-  <div class="container">
-    <h1 class="display-4  p-0 mb-4 ">Sobre nós</h1> 
-    <p class="lead"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para facilitar o acesso a informações e atualidades do meio. 
-    Viabilizar a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas.</p>
   </div>
 </div>
 
+<!-- TEXTO BEM-VINDO -->
 
-<h1 class="display-4  p-0 mb-4 " id="labelNossoTime">Nosso Time</h1> 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img  src="../../assets/images/1.png" alt="First slide">
+<div class="row">
+  <div class="col-md-6" id="texto">
+    <div class="row tamanho">
     </div>
-    <div class="carousel-item">
-      <img  src="../../assets/images/2.png" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img  src="../../assets/images/3.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img  src="../../assets/images/4.png" alt="Third slide">
-    </div>
-    <div class="carousel-item">
-      <img  src="../../assets/images/5.png" alt="Third slide">
+    <h1 class="display-3 d-flex justify-content-end ">Bem-Vindxs à sua <br>
+      comunidade de inclusão profissional</h1>
+    <div class="row">
+      <div class="col">
+        <nav class="navbar navbar-expand-lg navbar-transparent" id="navbaixo">
+          <a class="nav-link" [routerLink]="'/quemsomos'">Quem Somos</a><strong>|</strong>
+          <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
+          <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a><strong>|</strong>
+          <a class="nav-link" [routerLink]="'/faq'">Ajuda</a>
+        </nav>
+      </div>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+
+  <div class="col-md-6" id="cadeirante">
+    <img src="../../assets/images/inclusao.png" width="420" height="450" title="imagem cadeira de rodas colorida"
+      alt="imagem cadeira de rodas colorida">
+  </div>
 </div>
