--- a/src/app/quemsomos/quemsomos.component.css
+++ b/src/app/quemsomos/quemsomos.component.css
@@ -1,184 +1,60 @@
-#paragrafo{
-    text-align: center;
-}
-p{
-    text-align: justify;
-}
 
-.tamanho-img{
-    width: 100px;
-    height: 100px;
-}
-#gif{
-    width: 70px;
-    height: 50px ;
-}
+/* LOGO CLICKIN */
 
-#projeto{
-    text-align: justify;
-    border-style: solid;
-   
-}
-
-h2{
-    text-align: center;
-}
-
-
-p{
-    text-align:center;
-}
-
-.tamanho-img{
-    width: 100px;
-    height: 100px;
-}
-
-.tamanho-imagem{
+#logo{
+    left: 50px; /* posiciona a 90px para a esquerda */ 
+    top: 330px; /* posiciona a 70px para baixo */
     width: 200px;
-    height: 200px;
-    justify-content: center;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
+/* BOTÃO CADASTRAR/ENTRAR */
 
-#gif{
-    width: 80px;
-    height: 50px ;
+#cadastro{
+    margin-left: 120%;
 }
 
+/* CARROUSEL */
 
-
-h3{
-    margin-top: 20px;
+#carouselExampleIndicators{
     text-align: center;
-    font-family: 'Bebas Neue', cursive;
 }
-h2{
-    color: black;
-    font-size: 40px;
-    text-decoration: none;
-   }
-#botao{
-    margin-left: 8px;
-    
+
+.carousel-item{
+    height: 400px;
 }
-#bot{
-    margin-top: 10px;
+
+#labelNossoTime{
+    margin-left: 8.5%;
 }
 
 .card-body{
     text-align: center;
 }
-   
-#flipcard{
+
+/* TITULO */
+
+h3{
+    text-align: center;
+}
+
+/* NOSSO TIME */
+
+h4{
+    text-align: center;
+    margin-top: 2%;
+}
+/* TEXTO */
+
+p{
+    text-align: center;
+}
+
+/* FOOTER */
+
+#textorodape {
     display: flex;
-    justify-content: center;
-}
-
-.flip-card {
-  padding: 7%;
-  width: 300px;
-  height: 200px;
-  border-radius: 5px;
-  perspective: 1000px; /* Remova isso se você não quiser o efeito 3D */
-}
-
-/* Este contêiner é necessário para posicionar as partes frontal e traseira */
-.flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-  }
-  
-  /* 
-  Faça um giro horizontal ao mover o mouse sobre o recipiente da caixa de giro */
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  /* 
-  Posicione a frente e o verso */
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-  
-  /* 
-  Estilize a parte frontal (substituto se houver falta de imagem) */
-  .flip-card-front {
-    background-color: rgb(255, 255, 255);
-    color: rgb(253, 253, 253);
-  }
-  
-  /* 
-  Estilize o verso */
-  .flip-card-back {
-    background-color: rgb(255, 255, 255);
-    font-size: 15px;
-    color: rgb(172, 172, 172);
-    text-align-last: center;
-    transform: rotateY(180deg);
-  } 
-
-  /* Estiliza o Footer*/
-
-
-
-.social li a {
-    /*tamanho da imagem*/
-    height: 32px;
-    width: 32px;
-    /*image replamecent (substituição por imagem)*/
-    display: block;
-    text-indent: -9999px;
-  
-}
-
-.social a[href*="facebook.com"] {
-    background-image: url(../../assets/images/facebook.png);
-}
-
-.social a[href*="twitter.com"] {
-    background-image: url(../../assets/images/twitter.png);
-}
-
-.social a[href*="instagram.com"] {
-    background-image: url(../../assets/images/instagram.png);
-}
-
-ul {
-    list-style: none;
-    }
-
-li{
-    display: inline
-}
-
-.social li {
-    float: left;
-    margin-left: 25px;
-}
-.kl{
-    text-align: center;
-}
-.social{
-    margin-left: 415px;
-}
-.nav-link{
-    color: black;
-}
-#cadastro{
-    margin-left: 50%;
-}
-
-.titulo{
-    color: black;
-    text-decoration: none;
-    font-family: 'Quicksand', sans-serif;
+    justify-content: center ;
 
 }
